# blog-monorepo

./: .gitmodules  README.md
bayes-mediation/: README.md  index.Rmd
causal-bayes-3-pillars/: index.qmd
just-enough-conda/: index.md  index.qmd  pixi.toml
map-as-reduce/: index.md  index.qmd  pixi.toml
python-scope/: .gitignore  index.md  index.qmd  pyproject.toml
r-hy/: .gitignore  README.md  index.md  index.qmd  pyproject.toml
r-hy/hy_kernel/: install.py  kernel.py
