[project]
name = "r-hy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "calysto-hy>=0.1.1",
    "hy>=1.3.0",
    "hyrule>=1.0.1",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "jupyter>=1.1.1",
    "quarto-cli>=1.9.38",
    "toolz>=1.1.0",
]


[tool.uv.extra-build-dependencies]
hy-kernel = ["ipython", "IPython.kernel"]
